--- a/index_de.html
+++ b/index_de.html
@@ -131,7 +131,7 @@
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Modul TM Ajax Contact Form</a></li>
                           <li><a href="#olark">TM Olark live chat</a></li>
-                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#facebook_feed">TM Facebook Page Plugin</a></li>
                           <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
                           <li><a href="#twitter_feed">SW Twitter Display</a></li>
                           <li><a href="#instagram_feed">TM Instagram</a></li>
@@ -141,6 +141,7 @@
                           <li><a href="#googlemap">Googlemap plugin</a></li>
                           <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
                           <li><a href="#joomgallery">JoomGallery</a></li>
+                          <li><a href="#style_switcher">TM Ajax Style Switcher</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1119,14 +1120,14 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
     <p>Unser Unternehmen stellt Ihnen den Tarifplan <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> innerhalb von 6 Monaten gratis zur Verfügung. Folgen Sie diesem Link <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">um es zu registrieren</a>.</p>
   </div>
 
-  <div id="facebook_feed">
-    <h3>SW Facebook Display</h3>
-    <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
-    <p class="muted text-center">Bild 26. Modul SW Facebook Display</p></div>
-    <p>SW Facebook Display ist ein Modul, das "Facebook Like Box" anzeigt.</p>
-    <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
-    <p class="muted text-center">Bilder 26-1. Moduleinstellungen SW Facebook Display</p></div>
-    <p>So sehen die Grundeinstellungen des Moduls SW Facebook Display aus. Ausführliche Inormation darüber finden Sie <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>.</p>
+  <div id="facebook_feed"> 
+    <h3>TM Facebook Page Plugin</h3> 
+    <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure> 
+    <p class="muted text-center">Bild 26. TM Facebook Page Plugin Modul</p></div> 
+    <p>TM Facebook Page Plugin – ist ein Modul, dass "Facebook Page" Plugin anzeigt.</p> 
+    <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure> 
+    <p class="muted text-center">Bild 26-1. TM Facebook Page Plugin Moduleinstellungen</p></div> 
+    <p>So sehen die Haupteinstellungen des TM Facebook Page Plugin Moduls. Das Feld <strong>Facebook App ID</strong> muss unbedingt ausgefüllt werden. Es ist die ID der Facebook Anwendung. Um diese ID zu erhalten, folgen Sie dem Link <a href="https://developers.facebook.com/" rel="nofollow" target="_blank">https://developers.facebook.com/</a> und erstellen die Anwendung für Ihre Webseite. Die ausführliche Information über andere Einstellungen können Sie auf der <a href="https://developers.facebook.com/docs/plugins/page-plugin" rel="nofollow" target="_blank">offiziellen Webseite finden</a>.</p> 
   </div>
 
   <div id="pinterest_feed">
@@ -1244,6 +1245,15 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
     <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
     <p class="muted text-center">Bilder 35-4. Einstellungen für die Komponente JoomGallery</p></div>
     <p>So sieht die Seite mit der Komponentenbeschreibung JoomGallery aus. Ausführliche Inormation darüber finden Sie <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">auf der offiziellen Webseite</a>. Damit die Komponente korrekt funktionieren kann, muss auch das Plugin JoomFancybox zusätzlich installiert werden.</p>
+  </div>
+  
+  <div id="style_switcher"> 
+    <h3>TM Ajax Style Switcher Module</h3> 
+    <div class="img-container"><figure class="img-polaroid"><img src="img/style_switcher_1.jpg" alt=""></figure> 
+    <p class="muted text-center">Bild 36. TM Ajax Style Switcher Module</p></div> 
+    <p>TM Ajax Style Switcher Module &#8211; ist ein Modul, das ermöglicht es, Farbschemas im Frontend der Webseite umzuschalten. Das Modul verwendet automatisch Farbschemas aus dem Ordner <strong>color_schemes\css\</strong> vom aktiven Theme.</p> 
+    <p>Das jeweilige Modul hat keine speziellen Einstellungen im Control Panel. Es hat nur Standardeinstellungen, die alle Module haben.</p> 
+    <p>Achten Sie darauf, dass dieses Modul auf der Demoversion im Demo-Modus (mit Hilfe von Cookies) funktionieren kann. Auf der aktuellen Website funktioniert das Modul im Vollmodus und ist nur für eingeloggte Benutzer mit den Rechten der Benutzerkategorien <strong>SuperAdmin</strong> verfügbar.</p> 
   </div>
 
 </section>
