--- a/index_fr.html
+++ b/index_fr.html
@@ -131,7 +131,7 @@
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Module de Formulaire de Contact en Ajax TM</a></li>
                           <li><a href="#olark">TM Olark live chat</a></li>
-                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#facebook_feed">TM Facebook Page Plugin</a></li>
                           <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
                           <li><a href="#twitter_feed">SW Twitter Display</a></li>
                           <li><a href="#instagram_feed">TM Instagram</a></li>
@@ -141,6 +141,7 @@
                           <li><a href="#googlemap">Googlemap plugin</a></li>
                           <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
                           <li><a href="#joomgallery">JoomGallery</a></li>
+                          <li><a href="#style_switcher">TM Ajax Style Switcher</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1125,14 +1126,14 @@
   <p>Notre compagnie vous offre le forfait <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> pour 6 mois gratuitement. Utilisez le suivant <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">lien</a> de vous inscrire.</p>
 </div>
 
-<div id="facebook_feed">
-<h3>SW Facebook Display</h3>
-<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
-<p class="muted text-center">Img. 26. Le module de SW Facebook Display</p></div>
-<p>SW Facebook Display - le module qui permet d'afficher "Facebook Like Box".</p>
-<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
-<p class="muted text-center">Img. 26-1. Les paramètres de SW Facebook Display</p></div>
-<p>Ici vous pouvez voir les principaux paramètres de SW Facebook Display.  N'hésitez pas à vérifier pour plus de détails au <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">site officiel</a>.</p>
+<div id="facebook_feed"> 
+<h3>TM Facebook Page Plugin</h3> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure> 
+<p class="muted text-center">Img. 26. TM Facebook Page Plugin module </p></div> 
+<p>TM Facebook Page Plugin“ le module qui est conçu pour afficher le plugin "Facebook Page".</p> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure> 
+<p class="muted text-center">Img. 26-1.Paramètres du module TM Facebook Page Plugin</p></div> 
+<p>Ici vous pouvez voir  les paramètres principaux du module TM Facebook Page Plugin. <strong>Facebook App ID</strong> est un champ obligatoire. C'est ID de votre application Facebook. Pour obtenir l'ID, suivez ce lien <a href="https://developers.facebook.com/" rel="nofollow" target="_blank">https://developers.facebook.com/</a> et créez votre application. N'hésitez pas à aller voir plus de détails sur la configuration supplémentaire sur <a href="https://developers.facebook.com/docs/plugins/page-plugin" rel="nofollow" target="_blank">le site officiel</a>.</p> 
 </div>
 
 <div id="pinterest_feed">
@@ -1250,6 +1251,15 @@
 <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
 <p class="muted text-center">Img. 35-4. Les paramètres de JoomGallery</p></div>
 <p>Voici la page principale du composant de JoomGallery.  N'hésitez pas à vérifier pour plus de détails au <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">site officiel</a>. En outre, il existe le plugin JoomFancybox qui doit être installé afin de travailler avec le composant.</p>
+</div>
+
+<div id="style_switcher">
+<h3>TM Ajax Style Switcher Module</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/style_switcher_1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 36. TM Ajax Style Switcher Module</p></div>
+<p>TM Ajax Style Switcher Module &#8211; le module qui permet de basculer entre les schémas de couleur via front-end. Le module applique automatiquement les palettes de couleurs depuis le dossier <strong>color_schemes\css\</strong> du thème actuel.</p>
+<p>Il n'y a aucuns paramètres spécifiques du module dans le panneau d'administration, il inclut la configuration standard du module.</p>
+<p>Veuillez noter que sur live demo du template, le module fonctionne en mode de prévisualisation, en utilisant des cookies. Sur le site Web réel le module fonctionne dans un mode complet et il est disponible uniquement pour les utilisateurs autorisés avec les droits de <strong>SuperAdmin</strong>.</p>
 </div>
 
 </section>
