--- a/index_it.html
+++ b/index_it.html
@@ -131,7 +131,7 @@
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Modulo Contatti TM Ajax</a></li>
                           <li><a href="#olark">TM Olark live chat</a></li>
-                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#facebook_feed">TM Facebook Page Plugin</a></li>
                           <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
                           <li><a href="#twitter_feed">SW Twitter Display</a></li>
                           <li><a href="#instagram_feed">TM Instagram</a></li>
@@ -141,6 +141,7 @@
                           <li><a href="#googlemap">Googlemap plugin</a></li>
                           <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
                           <li><a href="#joomgallery">JoomGallery</a></li>
+                          <li><a href="#style_switcher">TM Ajax Style Switcher</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1124,14 +1125,14 @@
   <p>La nostra azienda vi offre il pacchetto <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> gratis per 6 mesi. Usa il seguente <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">link</a> per registrarti.</p>
 </div>
 
-<div id="facebook_feed">
-<h3>SW Facebook Display</h3>
-<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
-<p class="muted text-center">Imm. 26. Modulo SW Facebook Display</p></div>
-<p>SW Facebook Display - un modulo che ti consente di inserire una casella Mi Piace per Facebook.</p>
-<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
-<p class="muted text-center">Imm. 26-1. Impostazioni modulo SW Facebook Display</p></div>
-<p>Qui troverai le impostazioni principali di SW Facebook Display. Puoi approfondire visitando il <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">sito ufficiale</a>.</p>
+<div id="facebook_feed"> 
+<h3>TM Facebook Page Plugin</h3> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure> 
+<p class="muted text-center">Img. 26. TM Facebook Page Plugin module</p></div> 
+<p>TM Facebook Page Plugin“ il modulo creato per visualizzare il plugin "Facebook Page".</p> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure> 
+<p class="muted text-center">Img. 26-1. TM Facebook Page Plugin module settings</p></div> 
+<p>Qui si possono visualizzare le impostazioni principali del plugin TM Facebook Page Plugin. Il campo <strong>Facebook App ID</strong> è obbligatorio. Qui va inserito il proprio ID dell'applicazione Facebook. Per ottenere il proprio ID seguire questo link <a href="https://developers.facebook.com/" rel="nofollow" target="_blank">https://developers.facebook.com/</a> e creare una richiesta per il proprio sito web. Ulteriori informazioni sulla configurazione sono disponibili sul <a href="https://developers.facebook.com/docs/plugins/page-plugin" rel="nofollow" target="_blank">sito ufficiale</a>.</p> 
 </div>
 
 <div id="pinterest_feed">
@@ -1249,6 +1250,15 @@
 <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
 <p class="muted text-center">Imm. 35-4. impostazioni JoomGallery</p></div>
 <p>Questa è la pagina principale della componente JoomGallery component. Puoi approfondire visitando il <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">sito ufficiale</a>. C'è inoltre un plugin, JoomFancybox, che deve essere insallato per poter lavorare con la componente.</p>
+</div>
+
+<div id="style_switcher">
+<h3>TM Ajax Style Switcher Module</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/style_switcher_1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 36. TM Ajax Style Switcher Module</p></div>
+<p>TM Ajax Style Switcher Module &#8211; è un modulo che consente di cambiare lo schema colore attraverso il front-end. Il modulo applica automaticamente i moduli colore dalla <strong>color_schemes\css\</strong> cartella del tema in uso.</p>
+<p>Il modulo non ha impostazioni specifiche nel pannello admin. Ci sono solo le configurazioni standard dei moduli.</p>
+<p>Nota che nella demo live del modello il modulo funziona in modalità anteprima, utilizzando i cookie. Sul sito web vero e proprio, il modulo funziona invece in modalità completa ed è disponibile solo agli utenti con permesso  <strong>SuperAdmin</strong>.</p>
 </div>
 
 </section>
