--- a/index_pl.html
+++ b/index_pl.html
@@ -131,7 +131,7 @@
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Moduł Formularza Kontaktowego TM Ajax</a></li>
                           <li><a href="#olark">TM Olark live chat</a></li>
-                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#facebook_feed">TM Facebook Page Plugin</a></li>
                           <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
                           <li><a href="#twitter_feed">SW Twitter Display</a></li>
                           <li><a href="#instagram_feed">TM Instagram</a></li>
@@ -141,6 +141,7 @@
                           <li><a href="#googlemap">Googlemap plugin</a></li>
                           <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
                           <li><a href="#joomgallery">JoomGallery</a></li>
+                          <li><a href="#style_switcher">TM Ajax Style Switcher</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1126,14 +1127,14 @@
   <p>Nasza firma oferuje Państwu<a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Brązowy"</a> pakiet 6 miesięcy za darmo. Użyj następującego linka <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">link</a> , aby się zarejestrować.</p>
 </div>
 
-<div id="facebook_feed">
-<h3>Wyświetlacz SW Facebook</h3>
-<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
-<p class="muted text-center">Obrazek 26. Moduł Wyświetlacza SW Facebook</p></div>
-<p>Wyświetlacz SW Facebook - moduł, który pozwala na wyświetlanie "Facebook Like Box".</p>
-<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
-<p class="muted text-center">Obrazek 26-1. Ustawienia modułu Wyświetlacza SW Facebook</p></div>
-<p>Tutaj możesz zobaczyć główne ustawienia Wyświetlacza SW Facebook. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow"></a>.</p>
+<div id="facebook_feed"> 
+<h3>TM Facebook Page Plugin</h3> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure> 
+<p class="muted text-center">Img. 26. TM Facebook Page Plugin module</p></div> 
+<p>TM Facebook Page Plugin“ to moduł przeznaczony do wyświetlania wtyczki „Facebook Page”</p> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure> 
+<p class="muted text-center">Img. 26-1. TM Facebook Page Plugin module settings</p></div> 
+<p>Tutaj możesz zobaczyć główne ustawienia modułu TM Facebook Page Plugin. <strong>Facebook App ID</strong> jest polem wymaganym. To jest twój identyfikator aplikacji Facebook. W celu uzyskania identyfikatora przejdź na ten link: <a href="https://developers.facebook.com/" rel="nofollow" target="_blank">https://developers.facebook.com/</a> i stworzyj własną aplikację internetową. Zapraszamy do sprawdzenia szczegółów na stronie dodatkowej konfiguracji <a href="https://developers.facebook.com/docs/plugins/page-plugin" rel="nofollow" target="_blank">oficjalnej witryny</a>.</p> 
 </div>
 
 <div id="pinterest_feed">
@@ -1251,6 +1252,15 @@
 <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
 <p class="muted text-center">Obrazek 35-4. Ustawienia JoomGallery</p></div>
 <p>Oto strona główna komponentu JoomGallery. Więcej szczegółów uzyskasz na oficjalnej stronie <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow"></a>.Ponadto, istnieje jeszcze wtyczka JoomFancybox, która musi być zainstalowana w celu współpracy z komponentem.</p>
+</div>
+
+<div id="style_switcher">
+<h3>TM Ajax Style Switcher Module</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/style_switcher_1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 36. TM Ajax Style Switcher Module</p></div>
+<p>TM Ajax Style Switcher Module &#8211; jest modułem, który pozwala przełączać schematy kolorów przez frontend. Moduł automatycznie stosuje schematy kolorów z folderu <strong>color_schemes\css\</strong> używanego motywu.</p>
+<p>Moduł nie ma żadnych specjalnych ustawień w panelu administratora, on zawiera standardową konfigurację.</p>
+<p>Proszę pamiętać, że przy demonstracji szablonu na żywo moduł pracuje w trybie podglądu za pomocą plików cookies. Na rzeczywistej witrynie moduł pracuje w pełnym trybie i jest dostępny tylko dla autoryzowanych użytkowników z prawami <strong>SuperAdmin</strong>.</p>
 </div>
 
 </section>
