--- a/index_pt.html
+++ b/index_pt.html
@@ -131,7 +131,7 @@
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">Módulo de Formulário de Contato TM Ajax</a></li>
                           <li><a href="#olark">TM Olark live chat</a></li>
-                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#facebook_feed">TM Facebook Page Plugin</a></li>
                           <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
                           <li><a href="#twitter_feed">SW Twitter Display</a></li>
                           <li><a href="#instagram_feed">TM Instagram</a></li>
@@ -141,6 +141,7 @@
                           <li><a href="#googlemap">Googlemap plugin</a></li>
                           <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
                           <li><a href="#joomgallery">JoomGallery</a></li>
+                          <li><a href="#style_switcher">TM Ajax Style Switcher</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1141,14 +1142,14 @@ O Formulário de Contato TM Ajax é um módulo de formulário para a engine do J
   <p>Nossa empresa lhe fornece um pacote <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> gratuito por 6 meses. Use o seguinte <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">link</a> para se cadastrar.</p>
 </div>
 
-<div id="facebook_feed">
-<h3>SW Facebook Display</h3>
-<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
-<p class="muted text-center">Img. 26. SW Facebook Display module</p></div>
-<p>SW Facebook Display - módulo que permite mostrar a "Like Box do Facebook".</p>
-<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
-<p class="muted text-center">Img. 26-1. Configurações do módulo SW Facebook Display</p></div>
-<p>Aqui você pode ver as configurações principai do SW Facebook Display. Você pode encontrar mais detalhes no <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">site oficial</a>.</p>
+<div id="facebook_feed"> 
+<h3>TM Facebook Page Plugin</h3> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure> 
+<p class="muted text-center">Img. 26. módulo TM Facebook Page Plugin</p></div> 
+<p>TM Facebook Page Plugin“ o módulo criado para mostrar o plugin "Facebook Page".</p> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure> 
+<p class="muted text-center">Img. 26-1. Configurações do módulo TM Facebook Page Plugin</p></div> 
+<p>Aqui você pode ver as definições principais do módulo TM Facebook Page Plugin. <strong>Facebook App ID</strong> é um campo obrigatório. Esse é o número de identificação do seu aplicativo do Facebook. Para conseguir esse ID, vá para <a href="https://developers.facebook.com/" rel="nofollow" target="_blank">https://developers.facebook.com/</a> e crie seu aplicativo para websites. Sinta-se à vontade para descobrir mais detalhes de configuração no <a href="https://developers.facebook.com/docs/plugins/page-plugin" rel="nofollow" target="_blank">site oficial</a>.</p> 
 </div>
 
 <div id="pinterest_feed">
@@ -1266,6 +1267,15 @@ O Formulário de Contato TM Ajax é um módulo de formulário para a engine do J
 <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
 <p class="muted text-center">Img. 35-4. Configurações do JoomGallery</p></div>
 <p>Essa é a página principal do componente JoomGallery. Você pode saber mais no <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">site oficial</a>. Além disso, tem um plugin do JoomFancybox que precisa ser instalado para funcionar com o componente.</p>
+</div>
+
+<div id="style_switcher">
+<h3>TM Ajax Style Switcher Module</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/style_switcher_1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 36. módulo TM Ajax Style Switcher</p></div>
+<p>TM Ajax Style Switcher Module &#8211; é um módulo que te permite mudar os esquemas de cor através do front-end. O módulo aplica esses esquemas automaticamente através da pasta <strong>color_schemes\css\</strong> do tema usado.</p>
+<p>Não ha configurações de módulo específicas no painel administrativo, isso inclui a configuração padrão do módulo.</p>
+<p>Perceba que a demonstração do módulo funciona no modo prévia (preview mode), usando cookies. No site em si o módulo funciona em modo completo e está apenas disponível para usuários com direitos de <strong>SuperAdmin</strong>.</p>
 </div>
 
 </section>
