--- a/index_ru.html
+++ b/index_ru.html
@@ -1153,15 +1153,15 @@
 
   </div>
 
-  <div id="facebook_feed">
-    <h3>TM Facebook Page Plugin</h3>
-    <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
-    <p class="muted text-center">Рис. 26. Модуль TM Facebook Page Plugin</p></div>
-    <p>TM Facebook Page Plugin - модуль для вывода "Facebook Page Plugin".</p>
-    <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
-    <p class="muted text-center">Рис. 26-1. Настройки модуля TM Facebook Page Plugin</p></div>
-    <p>Так выглядят основные настройки модуля TM Facebook Page Plugin. Обязательное для заполнения поле - Facebook App ID. Это идентификатор приложения Facebook. Для того чтобы получить идентификатор, перейдите по ссылке <a href="https://developers.facebook.com/" rel="nofollow" target="_blank">https://developers.facebook.com/</a> и создайте приложение для вашего сайта. Детальную информацию по остальным настройкам можно узнать на <a href="https://developers.facebook.com/docs/plugins/page-plugin" rel="nofollow" target="_blank">официальном сайте</a>.</p>
-  </div>
+  <div id="facebook_feed"> 
+<h3>TM Facebook Page Plugin</h3> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure> 
+<p class="muted text-center">Рис. 26. Модуль TM Facebook Page Plugin</p></div> 
+<p>TM Facebook Page Plugin – модуль предназначен для вывода "Facebook Page" плагина.</p> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure> 
+<p class="muted text-center">Рис. 26-1. Настройки модуля TM Facebook Page Plugin</p></div> 
+<p>Так выглядят основные настройки модуля TM Facebook Page Plugin. Обязательное для заполнения поле - <strong>Facebook App ID</strong>. Это идентификатор Facebook приложения. Для того чтобы получить идентификатор, перейдите по ссылке <a href="https://developers.facebook.com/" rel="nofollow" target="_blank">https://developers.facebook.com/</a> и создайте приложение для вашего сайта. Детальную информацию по остальным настройкам вы можете найти на <a href="https://developers.facebook.com/docs/plugins/page-plugin" rel="nofollow" target="_blank">официальном сайте</a>.</p> 
+</div>
 
   <div id="pinterest_feed">
     <h3>SW Pinterest Display</h3>
@@ -1280,13 +1280,13 @@
     <p>Так выглядит страница описания компонента JoomGallery. Более детальная информация на <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">официальном сайте</a>. Также для полноценной работы данного компонента дополнительно устанавливается JoomFancybox плагин.</p>
   </div>
 
-  <div id="style_switcher">
-    <h3>TM Ajax Style Switcher Module</h3>
-    <div class="img-container"><figure class="img-polaroid"><img src="img/style_switcher_1.jpg" alt=""></figure>
-    <p class="muted text-center">Рис. 36. TM Ajax Style Switcher Module</p></div>
-    <p>TM Ajax Style Switcher Module - модуль для переключения цветовых схем на фронтенде. Модуль подтягивает цветовые схемы автоматически из папки color_schemes\css\ активной темы.</p>
-    <p>В админ-панели модуль не имеет уникальных настроек, только стандартные для всех модулей настройки.</p>
-    <p>Обратите внимание, что на livedemo модуль работает в демо-режиме, через cookies. На действующем сайте модуль работает в полноценном режиме и доступен только для авторизованных пользователей с правами категории SuperAdmin.</p>
+  <div id="style_switcher"> 
+  <h3>TM Ajax Style Switcher Module</h3> 
+  <div class="img-container"><figure class="img-polaroid"><img src="img/style_switcher_1.jpg" alt=""></figure> 
+  <p class="muted text-center">Рис. 36. TM Ajax Style Switcher Module</p></div> 
+  <p>TM Ajax Style Switcher Module &#8211; это модуль позволяющий переключать цветовые схемы на фронтенде сайта. Модуль автоматически применяет цветовые схемы из папки <strong>color_schemes\css\</strong> активной темы.</p> 
+  <p>Данный модуль не имеет особых настроек в админ панели, только стандартные для всех модулей настройки.</p> 
+  <p>Обратите внимание, что на демо шаблона модуль работает в демонстрационном режиме, используя cookies. На действующем сайте модуль работает в полноценном режиме и доступен только для авторизованных пользователей с правами категории пользователей <strong>SuperAdmin</strong>.</p> 
   </div>
 
 </section>
