--- a/index_tr.html
+++ b/index_tr.html
@@ -131,7 +131,7 @@
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">TM Ajax Contact Form Modülü</a></li>
                           <li><a href="#olark">TM Olark live chat</a></li>
-                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#facebook_feed">TM Facebook Page Plugin</a></li>
                           <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
                           <li><a href="#twitter_feed">SW Twitter Display</a></li>
                           <li><a href="#instagram_feed">TM Instagram</a></li>
@@ -141,6 +141,7 @@
                           <li><a href="#googlemap">Googlemap plugin</a></li>
                           <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
                           <li><a href="#joomgallery">JoomGallery</a></li>
+                          <li><a href="#style_switcher">TM Ajax Style Switcher</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1126,14 +1127,14 @@
   <p>Þirketimiz size, 6 aylýk ücretsiz <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> paket vermektedir. Kayýt olmak için <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">bu adrese</a> týklayýnýz.</p>
 </div>
 
-<div id="facebook_feed">
-<h3>SW Facebook Display</h3>
-<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
-<p class="muted text-center">Img. 26. SW Facebook Display modülü</p></div>
-<p>SW Facebook Display - bu modül Facebook beðeni kutusunu gösterir.</p>
-<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
-<p class="muted text-center">Img. 26-1. SW Facebook Display modül ayarlarý</p></div>
-<p>SW Facebook Display ayarlarýný buradan görebilirsiniz. Daha fazla detay için <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz.</p>
+<div id="facebook_feed"> 
+<h3>TM Facebook Page Eklentisi</h3> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure> 
+<p class="muted text-center">Img. 26. TM Facebook Page Eklenti modülü</p></div> 
+<p>TM Facebook Page Eklentisi“ "Facebook Page" eklentisini göstermek için tasarlanmış bir modüldür.</p> 
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure> 
+<p class="muted text-center">Img. 26-1. TM Facebook Page Eklentisi modül ayarları</p></div> 
+<p>Burada TM Facebook Page Eklenti modülü için temel ayarlar yer alır. <strong>Facebook App ID</strong> alanı doldurulmak zorundadır. Bu sizin Facebook uygulama ID'nizdir (kimlik). ID almak için <a href="https://developers.facebook.com/" rel="nofollow" target="_blank">https://developers.facebook.com/</a> sayfasını ziyaret edebilir ve websiteniz için uygulama oluşturabilirsiniz. Ekstra düzenleme detayları için <a href="https://developers.facebook.com/docs/plugins/page-plugin" rel="nofollow" target="_blank">resmi website</a>'ye bakabilirsiniz.</p> 
 </div>
 
 <div id="pinterest_feed">
@@ -1251,6 +1252,15 @@
 <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
 <p class="muted text-center">Img. 35-4. JoomGallery ayarlarý</p></div>
 <p>JoomGallery bileþeninin ayarlarýný buradan görüntüleyebilirsiniz. Daha fazla detay için <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">resmi site</a>ye bakabilirsiniz. Ayrýca, bu bileþenin çalýþmasý için JoomFancybox eklentisi de kurulmalýdýr.</p>
+</div>
+
+<div id="style_switcher">
+<h3>TM Ajax Style Switcher Modülü</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/style_switcher_1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 36. TM Ajax Style Switcher Modülü</p></div>
+<p>TM Ajax Style Switcher Müdülü &#8211; renk şemalarını kolaylıkla değiştirebilmenizi sağlayan bir modüldür. Modül renk şemalarını, kullanılmakta olan temanın <strong>color_schemes\css\</strong> klasöründen otomatik olarak yapar.</p>
+<p>Yönetici panelinde, modül için özel bir ayar bulunmaz. Sadece standart modül ayarları yer alır.</p>
+<p>Demodaki şablonda modülün çerez kullarank, görüntüleme modunda çalıştığını unutmayınız. Sitede ise modül tam modda çalışır ve <strong>SuperAdmin</strong> iznine sahip olan kullanıcılar tarafından kullanılabilir.</p>
 </div>
 
 </section>
