--- a/index_tr.html
+++ b/index_tr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Joomla 3.x Dokümantasyon</title>
+  <title>Joomla 3.x Dokümantasyon v3-2</title>
   <meta charset="utf-8">
   <link rel="canonical" href="http://www.templatemonster.com/help/quick-start-guide/joomla-templates/master/index_en.html"/>
   <link rel="stylesheet" href="css/bootstrap.css" media="screen">
