--- a/index_es.html
+++ b/index_es.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Documentación Joomla 3.x</title>
+  <title>Documentación Joomla 3.x v2-4</title>
   <meta charset="utf-8">
   <link rel="canonical" href="http://www.templatemonster.com/help/quick-start-guide/joomla-templates/master/index_en.html"/>
   <link rel="stylesheet" href="css/bootstrap.css" media="screen">
