--- a/quick_guide/index_en.html
+++ b/quick_guide/index_en.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Quick Guide</title>
+		<title>Quick Guide v2-4</title>
 
 		<link rel="stylesheet" href="css/style.css">
 		<link href='//fonts.googleapis.com/css?family=BenchNine:300,400,700' rel='stylesheet' type='text/css'>
