--- a/index_de.html
+++ b/index_de.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Joomla 3.x Dokumentatio</title>
+  <title>Joomla 3.x Dokumentatio v3-0</title>
   <meta charset="utf-8">
   <link rel="canonical" href="http://www.templatemonster.com/help/quick-start-guide/joomla-templates/master/index_en.html"/>
   <link rel="stylesheet" href="css/bootstrap.css" media="screen">
