--- a/index_es.html
+++ b/index_es.html
@@ -268,6 +268,15 @@
 <section class="block-templates" id="getting_started">  
   <h2 class="item3"><i class="icon-play"></i> Introducción  <small><i>¿Qué se puede hacer para que todo funcione?</i></small></h2>
 
+  <div class="zemez-chat-wrap">
+	 <p class="box-info"><span>Si no quieres pasar el tiempo instalando la plantilla, no dudes en <span class="label label-warning opener" onclick="showChat()">solicitar</span> el servicio de instalación utilizando nuestro chat en vivo.</span></p>
+	<form class="zemez-chat" id="zemez-chat" method="GET">
+		<input type="text" placeholder="Nombre:" name="uname" id="uname">
+		<input type="email" placeholder="Dirección de Email:" name="umail" id="umail">
+		<span onclick="startChat()">Comenzar Chat</span>
+	</form>
+	</div>
+  
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
       <h3><a href="#complete_install" class="scrollTo">Instalación Completa</a></h3>
