--- a/index_it.html
+++ b/index_it.html
@@ -265,6 +265,15 @@
 <section class="block-templates" id="getting_started">  
   <h2 class="item3"><i class="icon-play"></i> Per iniziare <small><i>I comandi indispensabili</i></small></h2>
 
+  <div class="zemez-chat-wrap">
+	 <p class="box-info"><span>Se non vuoi spendere il tempo per l'installazione del modello, non esitare a contattarci <span class="label label-warning opener" onclick="showChat()">ordina</span> servizio di installaione utilizzando il nostro live-chat.</span></p>
+	<form class="zemez-chat" id="zemez-chat" method="GET">
+		<input type="text" placeholder="Nome:" name="uname" id="uname">
+		<input type="email" placeholder="Indirizzo e-mail:" name="umail" id="umail">
+		<span onclick="startChat()">Avvia la Chat</span>
+	</form>
+	</div>
+  
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
       <h3><a href="#complete_install" class="scrollTo">Installazione Completa</a></h3>
