--- a/index_de.html
+++ b/index_de.html
@@ -6,7 +6,7 @@
   <link rel="canonical" href="http://www.templatemonster.com/help/quick-start-guide/joomla-templates/master/index_en.html"/>
   <link rel="stylesheet" href="css/bootstrap.css" media="screen">
   <link rel="stylesheet" href="css/responsive.css" media="screen">
-  <link rel="stylesheet" href="css/style.css" media="screen">
+  <link rel="stylesheet" href="css/style.css?v=1" media="screen">
   <link rel="stylesheet" href="css/flexslider.css"  media="screen">
   <link rel="stylesheet" href="css/prettify.css"  media="screen">
   <link rel="stylesheet" href="css/prettyPhoto.css"  media="screen">
@@ -18,7 +18,7 @@
   <script src="js/jquery.flexslider.js"></script>
   <script src="js/bootstrap-affix.js"></script>
   <script src="js/jquery.prettyPhoto.js"></script> 
-  <script src="js/script.js"></script>
+  <script src="js/script.js?v=1"></script>
 
       <!--[if IE 8]>
     <link rel="stylesheet" href="css/ie.css" />
@@ -266,6 +266,15 @@
 <section class="block-templates" id="getting_started">  
   <h2 class="item3"><i class="icon-play"></i> Einstieg <small><i>Worauf soll man klicken, damit es funktioniert</i></small></h2>
 
+  <div class="zemez-chat-wrap">
+<p class="box-info"><span>Wenn Sie einiges an Zeit sparen möchten, <span class="label label-warning opener" onclick="showChat()">bestellen</span> Sie den Installationsservice für Ihr Theme in unserem Online-Chat.</span></p>
+<form class="zemez-chat" id="zemez-chat" method="GET">
+		<input type="text" placeholder="Name:" name="uname" id="uname">
+		<input type="email" placeholder="E-Mail-Addresse:" name="umail" id="umail">
+		<span onclick="startChat()">Chat starten</span>
+	</form>
+</div>
+  
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
       <h3><a href="#complete_install" class="scrollTo"> Vollständige Installation</a></h3>
