--- a/index_en.html
+++ b/index_en.html
@@ -6,7 +6,7 @@
   <link rel="canonical" href="http://www.templatemonster.com/help/quick-start-guide/joomla-templates/master/index_en.html"/>
   <link rel="stylesheet" href="css/bootstrap.css" media="screen">
   <link rel="stylesheet" href="css/responsive.css" media="screen">
-  <link rel="stylesheet" href="css/style.css" media="screen">
+  <link rel="stylesheet" href="css/style.css?v=1" media="screen">
   <link rel="stylesheet" href="css/flexslider.css"  media="screen">
   <link rel="stylesheet" href="css/prettify.css"  media="screen">
   <link rel="stylesheet" href="css/prettyPhoto.css"  media="screen">
@@ -18,7 +18,7 @@
   <script src="js/jquery.flexslider.js"></script>
   <script src="js/bootstrap-affix.js"></script>
   <script src="js/jquery.prettyPhoto.js"></script> 
-  <script src="js/script.js"></script>
+  <script src="js/script.js?v=1"></script>
 
     <!--[if IE 8]>
     <link rel="stylesheet" href="css/ie.css" />
@@ -265,6 +265,15 @@
 <section class="block-templates" id="getting_started">  
   <h2 class="item3"><i class="icon-play"></i> Getting Started <small><i>What to click to make this work</i></small></h2>
 
+  <div class="zemez-chat-wrap">
+	<p class="box-info"><span>If you don't want to spend your time installing the template, don't hesitate to <span class="label label-warning opener" onclick="showChat()">order</span> installation service using our live-chat.</span></p>
+	<form class="zemez-chat" id="zemez-chat" method="GET">
+	<input type="text" placeholder="Name:" name="uname" id="uname">
+	<input type="email" placeholder="Email Address:" name="umail" id="umail">
+	<span onclick="startChat()">Start chat</span>
+	</form>
+	</div>
+  
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
       <h3><a href="#complete_install" class="scrollTo">Complete Installation</a></h3>
