--- a/index_ru.html
+++ b/index_ru.html
@@ -267,6 +267,15 @@
 <section class="block-templates" id="getting_started">  
   <h2 class="item3"><i class="icon-play"></i> Начало использования <small><i>Куда нажимать, чтобы приступить к работе</i></small></h2>
 
+  <div class="zemez-chat-wrap">
+	 <p class="box-info"><span>Если Вы не хотите тратить Ваше время на установку шаблона, вы всегда можете <span class="label label-warning opener" onclick="showChat()">заказать</span> услугу установки шаблона используя наш чат.</span></p>
+	<form class="zemez-chat" id="zemez-chat" method="GET">
+	<input type="text" placeholder="Имя:" name="uname" id="uname">
+	<input type="email" placeholder="Email:" name="umail" id="umail">
+	<span onclick="startChat()">Начать чат</span>
+	</form>
+	</div>
+  
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
       <h3><a href="#complete_install" class="scrollTo">Полная установка</a></h3>
